virtual Joystick working and added

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <include
-        layout="@layout/touch_controls" />
+    <!-- <include layout="@layout/touchControl" /> -->
+    <include layout="@layout/virtual_joystick" />
 
 </FrameLayout>
