Accelerometer input method working and SettingMenu class started

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <Button
+        android:id="@+id/settings_button"
+        android:layout_width="56dp"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="2dp"
+        android:layout_marginTop="2dp"
+        android:layout_gravity="right"
+        android:text="⚙"/>
+
     <!--<include layout="@layout/touch_controls" />-->
     <!--<include layout="@layout/virtual_joystick" />-->
 </FrameLayout>
