--- a/app/src/main/res/layout/menu.xml
+++ b/app/src/main/res/layout/menu.xml
@@ -8,10 +8,10 @@
 
     <RadioGroup
         android:id="@+id/control_type"
-        android:layout_width="138dp"
-        android:layout_height="246dp"
-        android:layout_marginTop="80dp"
-        android:layout_marginEnd="24dp"
+        android:layout_width="124dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="148dp"
+        android:layout_marginEnd="28dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -20,31 +20,31 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Joystixck" />
+            android:text="@string/joystick_radio_button" />
 
         <RadioButton
             android:id="@+id/touch_controls_radio"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Buttons" />
+            android:text="@string/touch_controls_radio_button" />
 
         <RadioButton
             android:id="@+id/accelerometer_radio"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Accelerometer" />
+            android:text="@string/accelerometer_radio_button" />
     </RadioGroup>
 
     <TextView
         android:id="@+id/controls_menu_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="92dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="28dp"
+        android:layout_marginBottom="16dp"
         android:text="Control Method:"
-        android:textSize="32dp"
+        android:textSize="20dp"
         app:layout_constraintBottom_toTopOf="@id/control_type"
         app:layout_constraintEnd_toEndOf="parent" />
 </android.support.constraint.ConstraintLayout>
