--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,13 +10,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <ImageButton
+    <Button
         android:id="@+id/settings_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_gravity="right"
-        android:layout_marginTop="2dp"
-        android:layout_marginRight="2dp"
-        android:contentDescription="settings_icon"
-        android:src="@drawable/settings_icon" />
+        android:layout_marginTop="1dp"
+        android:layout_marginRight="1dp"
+        android:background="@drawable/settings_icon"
+        android:contentDescription="settings_icon" />
 </FrameLayout>
